# raybaby

./: Cargo.toml  README.md
examples/: 01-spheres.ron
src/: app.rs  cli.rs  gui.rs  main.rs  scene.rs  storage.rs  types.rs  uniforms.rs
src/loader/: gltf.rs
src/pipeline/: compute.rs  render.rs
src/shader/: blit.wgsl  raytracer.wgsl
