[package]
name = "raybaby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
encase = { version = "0.6.1", features = ["glam"] }
env_logger = "0.10.0"
glam = { version = "0.24.1", features = ["serde"] }
nanorand = "0.7.0"
pollster = "0.3.0"
ron = "0.8.0"
serde = { version = "1.0.171", features = ["derive"] }
wgpu = "0.16.2"
winit = "0.28.6"
